<resources>
    <string name="app_name" translatable="false">Scany</string>
    <string name="pro_tag_inverse" translatable="false">🅿🆁🅾</string>
    <string name="retry_btn">Retry</string>
    <string name="apply_btn">Apply</string>
    <string name="delete_btn">Delete</string>
    <string name="cancel_btn">Cancel</string>
    <string name="done_btn">Done</string>
    <string name="share">Share</string>
    <string name="export">Export</string>

    <!-- Error messages -->
    <string name="error_msg">Ooops… something went wrong :(</string>

    <!-- Document list fragment -->
    <string name="document_list_title">Documents</string>
    <string name="add_document">Add</string>
    <string name="single_page_count">%d Page</string>
    <string name="multiple_page_count">%d Pages</string>

    <!-- Init database values -->
    <string name="doc_name_1">Example Document</string>

    <!-- Document fragment -->
    <string name="add_page">Page</string>
    <string name="add_page_long">Add page</string>
    <string name="export_pdf">Export PDF</string>
    <string name="delete_document">Delete document</string>
    <string name="no_page">No pages currently…</string>
    <string name="reorder">Reorder</string>
    <string name="edit_title">Edit title</string>
    <string name="reorder_min_2_pages">A minimum of two pages is required to reorder</string>

    <!-- Page card context menu -->
    <string name="page_card_context_menu_title">Page Options</string>

    <!-- Delete document dialog -->
    <string name="delete_document_dlg_title">Delete Document?</string>
    <string name="delete_document_dlg_delete">Delete</string>

    <!-- Edit name dialog -->
    <string name="edit_name_dlg_title">Set document name</string>
    <string name="edit_name_label">Name</string>
    <string name="name_to_short_err">Name to short</string>

    <string-array name="random_document_names">
        <item>Steve\'s CV</item>
        <item>Grandma\'s insurance</item>
        <item>Billy\'s poster</item>
        <item>Mom\'s recipe</item>
    </string-array>

    <string name="new_document_name">Document %d</string>

    <!-- Camera fragment -->
    <string name="take_photo_btn">Take photo</string>
    <string name="missing_permission_err">Necessary permission was not granted :(</string>
    <string name="no_doc_found">No document could be detected :(</string>

    <!-- View page fragment -->
    <string name="view_page_title">View Page</string>
    <string name="load_page_err">Could not load page :(</string>

    <!-- Improve fragment -->
    <string name="source_image_descr">Source bitmap</string>
    <string name="apply_improve_btn">Apply improvements</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_left">Rotate left</string>
    <string name="choose_filters">Choose Filters</string>

    <!-- Reorder pages fragment -->
    <string name="reorder_pages_title">Reorder pages</string>

    <!-- Page item -->
    <string name="page_image_descr">Page</string>

    <!-- Filter display names -->
    <string name="grayscale_filter">Grayscale</string>
    <string name="sharpen_filter">Sharpen</string>
    <string name="blur_filter">Blur</string>
    <string name="binarize_filter">Binarize</string>

    <!-- Delete page dialog -->
    <string name="delete_page">Delete page</string>
    <string name="delete_page_question">Do you really want to delete this page?</string>
    <string name="delete_page_failed">Could not delete page :(</string>

    <!-- Export PDF fragment -->
    <string name="export_no_page">At least one page is required to generate a PDF document</string>
    <string name="export_pdf_error">Could not generate PDF :(</string>
    <string name="export_title">Export Document</string>
    <string name="export_page_list_title">Page Selection &amp; Order</string>
    <string name="select_all">Select all</string>
    <string name="clear_selection">Clear selection</string>
    <string name="export_page_size_title">Page Size</string>
    <string name="page_size">Page Size</string>
    <string name="img_scale_type_title">Image Scaling</string>
    <string name="export_fit_img">Fit</string>
    <string name="export_center_image_inside">Center Inside</string>
    <string name="document_type">Document Type</string>

    <string-array name="page_sizes">
        <item>Legal</item>
        <item>Letter</item>
        <item>Tabloid</item>
        <item>A0</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
    </string-array>

    <string-array name="document_types">
        <item>PDF</item>
    </string-array>

    <!-- View sub fragment -->
    <string name="view_sub_reason_doc_limit">You reached the limit of %d documents</string>
    <string name="view_sub_reason_page_limit">You reached the limit of %d pages per document</string>
    <string name="view_sub_title">Upgrade to PRO &#128640;</string>
    <string name="view_sub_benefits_title">Beneftis of 🅿🆁🅾</string>
    <string name="view_sub_billing_plan_title">Billing Plans</string>
    <string name="view_sub_subscribe">Subscribe</string>

    <string name="view_sub_monthly">Monthly</string>
    <string name="view_sub_yearly">Yearly</string>
    <string name="view_sub_cost_overview_monthly">%s per month</string>
    <string name="view_sub_cost_overview_yearly">%s per year</string>

    <string name="view_sub_fetch_plans_failed_title">Could not fetch subscription offers</string>
    <string name="view_sub_fetch_plans_failed_subtitle">Is your device connected to the internet?</string>
    <string name="export_pdf_no_pages_selected">No pages selected</string>

    <string-array name="view_sub_benefits">
        <item>Unlimited documents</item>
        <item>Unlimited pages per document</item>
    </string-array>

</resources>