<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reorder"
        android:icon="@drawable/reorder"
        android:title="@string/reorder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/export"
        android:icon="@drawable/pdf"
        android:title="@string/export_pdf"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/editTitle"
        android:icon="@drawable/title"
        android:title="@string/edit_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/deleteDocument"
        android:icon="@drawable/trashcan"
        android:title="@string/delete_document"
        app:showAsAction="never" />

</menu>